--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanessa Lebrun | Software Engineer & Web Developer</title>
-    <meta name="description" content="Vanessa Lebrun - Software Engineer specializing in web development, API integrations, and digital marketing." />
+    <title>Vanessa Lebrun | Web Developer & Marketing Specialist</title>
+    <meta name="description" content="Vanessa Lebrun - Web developer, Marketing Specialist, API integrations, and digital marketing." />
   </head>
   <body>
     <div id="root"></div>
