add google tag for Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanessa Lebrun | Web Developer & Marketing Specialist</title>
-    <meta name="description" content="Vanessa Lebrun - Web developer, Marketing Specialist, API integrations, and digital marketing." />
+    <meta
+      name="description"
+      content="Vanessa Lebrun - Web developer, Marketing Specialist, API integrations, and digital marketing."
+    />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JFT0Z3CMRK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-JFT0Z3CMRK");
+    </script>
   </head>
   <body>
     <div id="root"></div>
